--- a/client/src/components/helpers/navbarHelpers/ForesightSquare.css
+++ b/client/src/components/helpers/navbarHelpers/ForesightSquare.css
@@ -22,7 +22,8 @@
     display: flex;
     text-align: start;
     font-size: 0.9rem;
-    margin-bottom: 6px;
+    margin: 0px 0px 4px 0px;
+    padding: 0px 0px 0px 0px;
 }
 .foresight-square {
     box-sizing: border-box;
@@ -150,3 +151,116 @@ article::before {
     font-weight: 900;
     line-height: 1.75;
   }
+.mobile-change-to-row {
+    display: flex;
+    flex-direction: column;
+}
+@media (max-width: 400px) {
+    .mobile-change-to-row {
+        display: flex;
+        flex-direction: row;
+    }
+    #form-div {
+        left: 0;
+        right: 0;
+        top: 0;
+        bottom: 0;
+        margin: 0;
+    }
+    #form-div a {
+        margin: 0px 10px 5px 10px;
+        padding: 0px 5px 0px 5px;
+        font-size: 0.4rem;
+        width: 35%;
+    }
+    .foresight-square {
+        grid-template-columns: 1fr; /* Set the column to occupy the full width */
+        padding: 5px 0px 0px 5px;
+        width: 60%; /* Make it take full width */
+        height: 90vh; /* Make it take full height of the viewport */
+        margin: 0; /* Remove any margin */
+        align-self: flex-start;
+    }
+
+    .foresight-form {
+        position: relative;
+        padding: 20px 0px 0px 20px;
+        z-index: 10;
+    }
+    .form-group-foresight {
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+    h4.foresight-subheader {
+        font-size: 0.5rem;
+        margin-right: 5px;
+    }
+    h3.foresight-subheader {
+        font-size: 0.4rem;
+    }
+    .foresight-subheader {
+        width: 100%;
+        padding: 0px 0px 0px 0px;
+        margin: 0px 0px 0px 0px;
+    }
+    .alert-form-foresight {
+        display: flex;
+        text-align: start;
+        font-size: 0.5rem;
+        margin: 4px 4px 4px 4px;
+        padding: 0px 5px 0px 0px;
+    }
+    .glass-buttons-foresight {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+
+    }
+    .close-button {
+        position: absolute;
+        top: 20px;
+        right: -10px;
+        cursor: pointer;
+        color: white;
+        z-index: 10;
+        font-size: 1rem;
+        opacity: 70%;
+    }
+    article {
+        width: 203px;
+        height: 205px;
+        border-width: 0;
+        padding: 0;
+        top: 40px;
+        left: 8px;
+    }
+
+    article::before, article::after {
+        width: 200px;
+        height: 201px;
+        top: unset;
+        left: unset;
+        top: 14px;
+        left: 12px;
+    }
+    article::before {
+        position: fixed;
+        left: 20px;
+        /* bottom: 0px; */
+        top: 94px;
+        border: inherit;
+        border-width: 0.5em 0 0 0.5em;
+        width: 206px;
+        height: 206px;
+        z-index: 10;
+        box-shadow: inset 0 0 0 2px var(--c);
+        mix-blend-mode: difference;
+        pointer-events: none;
+        content: "";
+    }
+}
