--- a/client/src/components/helpers/navbarHelpers/MorphingFont.css
+++ b/client/src/components/helpers/navbarHelpers/MorphingFont.css
@@ -46,7 +46,31 @@ body {
     animation-delay: 0.2s;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 420px) {
+    #container {
+        height: 20px;
+    }
+    #text1,
+    #text2 {
+        position: relative;
+        width: 100%;
+        display: inline-block;
+        font-size: 0.3rem;
+        letter-spacing: 0.8px;
+        text-shadow: 2px 7px 5px rgba(0,0,0,0.7), 
+        0px -4px 10px rgba(255,255,255,0.7);
+
+        user-select: none;
+        opacity: 0;
+        animation-duration: 1s;
+        animation-fill-mode: forwards;
+    }
+    #text2 {
+        letter-spacing: 1px;
+    }
+}
+
+@media (max-width: 275px) {
     #container {
         height: 15px;
     }
