--- a/client/src/components/helpers/navbarHelpers/ForesightSquare.css
+++ b/client/src/components/helpers/navbarHelpers/ForesightSquare.css
@@ -155,30 +155,221 @@ article::before {
     display: flex;
     flex-direction: column;
 }
-@media (max-width: 420px) {
+
+
+
+@media (max-width: 950px) {
     .mobile-change-to-row {
         display: flex;
         flex-direction: row;
-        width: 60%;
+        width: 100%;
     }
     #form-div {
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
+        right: 20px;
+        bottom: 5px;
         margin: 0;
+        position: absolute;
+
     }
     #form-div a {
-        margin: 0px 5px 5px 5px;
-        padding: 0px 2px 0px 2px;
-        font-size: 0.4rem;
+        margin: 5px 5px 15px 5px;
+        padding: 0px 10px 0px 10px;
+        font-size: 0.6rem;
         width: 50%;
     }
     .foresight-square {
         grid-template-columns: 1fr; /* Set the column to occupy the full width */
         padding: 5px 0px 0px 5px;
+        width: 80%; /* Make it take full width */
+        height: 327px; /* Make it take full height of the viewport */
+        margin: 0; /* Remove any margin */
+        align-self: flex-start;
+    }
+
+    .foresight-form {
+        /* position: relative;
+        padding: 20px 0px 0px 20px;
+        z-index: 10; */
+    }
+    .form-group-foresight {
+        display: flex;
+        flex-direction: row;
+        text-align: left;
+        justify-content: space-between;
+        align-items: flex-start;
+    }
+    h4.foresight-subheader {
+        font-size: 0.7rem;
+        margin-right: 5px;
+        margin: 5px 5px 5px 5px;
+        align-self: center;
+    }
+    h3.foresight-subheader {
+        font-size: 0.4rem;
+        margin: 5px 5px 5px 5px;
+        justify-self: center;
+        width: 100%;
+        text-align: center;
+
+    }
+    .foresight-subheader {
+        width: 100%;
+        padding: 0px 0px 0px 0px;
+        margin: 0px 0px 0px 0px;
+    }
+    .alert-form-foresight {
+        display: flex;
+        text-align: start;
+        font-size: 0.5rem;
+        margin: 20px 4px 10px 4px;
+        padding: 0px 5px 0px 0px;
+    }
+    .glass-buttons-foresight {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+
+    }
+    .close-button {
+        position: absolute;
+        top: -2px;
+        right: -2px;
+        cursor: pointer;
+        color: white;
+        z-index: 10;
+        font-size: 1.2rem;
+        opacity: 70%;
+    }
+    article {
+        width: 595px;
+        height: 465px;
+        border-width: 0;
+        padding: 0;
+        top: 22px;
+        left: 8px;
+    }
+
+    article::before, article::after {
+        width: 594px;
+        height: 261px;
+        top: unset;
+        left: unset;
+        top: 11px;
+        left: 9px;
+    }
+    article::before {
+        position: fixed;
+
+        border: inherit;
+        border-width: 0.5em 0 0 0.5em;
+        width: 601px;
+        top: 155px;
+        left: 326px;
+        height: 271px;
+        z-index: 10;
+        box-shadow: inset 0 0 0 2px var(--c);
+        mix-blend-mode: difference;
+        pointer-events: none;
+        content: "";
+    }
+}
+@media (max-width: 450px) {
+    #form-div a {
+        margin: 0px 5px 15px 5px;
+        padding: 0px 3px 0px 3px;
+        font-size: 0.5rem;
+        width: 80%;
+    }
+    .glass-buttons-foresight {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        width: 35%;
+
+    }
+    .foresight-square {
+        grid-template-columns: 1fr; /* Set the column to occupy the full width */
+        padding: 5px 0px 0px 5px;
         width: 60%; /* Make it take full width */
-        height: 287px; /* Make it take full height of the viewport */
+        height: 427px; /* Make it take full height of the viewport */
+        margin: 0; /* Remove any margin */
+        align-self: flex-start;
+    }
+    h4.foresight-subheader {
+        font-size: 0.5rem;
+        margin-right: 5px;
+    }
+    .close-button {
+        position: absolute;
+        top: 0px;
+        right: -11px;
+        cursor: pointer;
+        color: white;
+        z-index: 10;
+        font-size: 1rem;
+        opacity: 70%;
+    }
+    article {
+        width: 295px;
+        height: 465px;
+        border-width: 0;
+        padding: 0;
+        top: -60px;
+        left: -4px;
+    }
+
+    article::before, article::after {
+        width: 292px;
+        height: 464px;
+        top: unset;
+        left: unset;
+        top: 11px;
+        left: 16px;
+    }
+    article::before {
+        position: fixed;
+        /* bottom: 0px; */
+        border: inherit;
+        border-width: 0.5em 0 0 0.5em;
+        width: 297px;
+        left: 68px;
+        top: 206px;
+        height: 467px;
+        z-index: 10;
+        box-shadow: inset 0 0 0 2px var(--c);
+        mix-blend-mode: difference;
+        pointer-events: none;
+        content: "";
+    }
+}
+@media (max-width: 350px) {
+    .mobile-change-to-row {
+        display: flex;
+        flex-direction: row;
+    }
+    #form-div {
+        /* left: 0; */
+        right: 20px;
+        /* top: 0; */
+        bottom: 5px;
+        margin: 0;
+        position: absolute;
+
+    }
+    #form-div a {
+        margin: 0px 10px 5px 10px;
+        padding: 0px 5px 0px 5px;
+        font-size: 0.3rem;
+        width: 35%;
+    }
+    .foresight-square {
+        grid-template-columns: 1fr; /* Set the column to occupy the full width */
+        padding: 5px 0px 0px 5px;
+        width: 60%; /* Make it take full width */
+        height: 227px; /* Make it take full height of the viewport */
         margin: 0; /* Remove any margin */
         align-self: flex-start;
     }
@@ -196,11 +387,11 @@ article::before {
         align-items: flex-start;
     }
     h4.foresight-subheader {
-        font-size: 0.4rem;
+        font-size: 0.5rem;
         margin-right: 5px;
     }
     h3.foresight-subheader {
-        font-size: 0.3rem;
+        font-size: 0.4rem;
     }
     .foresight-subheader {
         width: 100%;
@@ -210,7 +401,7 @@ article::before {
     .alert-form-foresight {
         display: flex;
         text-align: start;
-        font-size: 0.35rem;
+        font-size: 0.4rem;
         margin: 4px 4px 4px 4px;
         padding: 0px 5px 0px 0px;
     }
@@ -219,13 +410,13 @@ article::before {
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        width: 50%;
+        width: 40%;
 
     }
     .close-button {
         position: absolute;
         top: 15px;
-        right: -10px;
+        right: -8px;
         cursor: pointer;
         color: white;
         z-index: 10;
@@ -233,31 +424,31 @@ article::before {
         opacity: 70%;
     }
     article {
-        width: 294px;
-        height: 160px;
+        width: 295px;
+        height: 165px;
         border-width: 0;
         padding: 0;
-        top: 25px;
+        top: 22px;
         left: 8px;
     }
 
     article::before, article::after {
         width: 289px;
-        height: 154px;
+        height: 159px;
         top: unset;
         left: unset;
-        top: 13px;
+        top: 11px;
         left: 12px;
     }
     article::before {
         position: fixed;
-        left: 20px;
         /* bottom: 0px; */
-        top: 75px;
         border: inherit;
         border-width: 0.5em 0 0 0.5em;
-        width: 296px;
-        height: 162px;
+        width: 295px;
+        left: 20px;
+        top: 71px;
+        height: 165px;
         z-index: 10;
         box-shadow: inset 0 0 0 2px var(--c);
         mix-blend-mode: difference;
@@ -265,7 +456,7 @@ article::before {
         content: "";
     }
 }
-@media (max-width: 275px) {
+@media (max-width: 240px) {
     .mobile-change-to-row {
         display: flex;
         flex-direction: row;
@@ -276,6 +467,7 @@ article::before {
         top: 0;
         bottom: 0;
         margin: 0;
+
     }
     #form-div a {
         margin: 0px 10px 5px 10px;
