download forms r0esponsive done on all screens but width 375, 412, 414

--- a/client/src/components/helpers/navbarHelpers/ForesightSquare.css
+++ b/client/src/components/helpers/navbarHelpers/ForesightSquare.css
@@ -30,10 +30,7 @@
     display: grid;
     grid-gap: 1.25em;
     grid-template-columns: repeat(auto-fit, minmax(14em, 1fr));
-    
-    padding: 0.5em;
-    
-    
+
 }
 .form-group-foresight {
     display: flex;
@@ -156,305 +153,124 @@ article::before {
     flex-direction: column;
 }
 
-
-
-@media (max-width: 950px) {
-    .mobile-change-to-row {
-        display: flex;
-        flex-direction: row;
-        width: 100%;
-    }
-    #form-div {
-        right: 20px;
-        bottom: 5px;
-        margin: 0;
-        position: absolute;
-
-    }
-    #form-div a {
-        margin: 5px 5px 15px 5px;
-        padding: 0px 10px 0px 10px;
-        font-size: 0.6rem;
-        width: 50%;
-    }
-    .foresight-square {
-        grid-template-columns: 1fr; /* Set the column to occupy the full width */
-        padding: 5px 0px 0px 5px;
-        width: 80%; /* Make it take full width */
-        height: 327px; /* Make it take full height of the viewport */
-        margin: 0; /* Remove any margin */
-        align-self: flex-start;
-    }
-
-    .foresight-form {
-        /* position: relative;
-        padding: 20px 0px 0px 20px;
-        z-index: 10; */
-    }
-    .form-group-foresight {
-        display: flex;
-        flex-direction: row;
-        text-align: left;
-        justify-content: space-between;
-        align-items: flex-start;
-    }
+@media (max-height: 650px) and (min-width: 450px) {   
     h4.foresight-subheader {
         font-size: 0.7rem;
-        margin-right: 5px;
-        margin: 5px 5px 5px 5px;
-        align-self: center;
-    }
-    h3.foresight-subheader {
-        font-size: 0.4rem;
-        margin: 5px 5px 5px 5px;
-        justify-self: center;
-        width: 100%;
-        text-align: center;
-
     }
     .foresight-subheader {
-        width: 100%;
+        width: 100px;
         padding: 0px 0px 0px 0px;
         margin: 0px 0px 0px 0px;
     }
-    .alert-form-foresight {
-        display: flex;
-        text-align: start;
-        font-size: 0.5rem;
-        margin: 20px 4px 10px 4px;
-        padding: 0px 5px 0px 0px;
-    }
     .glass-buttons-foresight {
         display: flex;
         flex-direction: row;
         align-items: center;
         justify-content: center;
-        width: 100%;
+        width: 50%;
 
-    }
-    .close-button {
-        position: absolute;
-        top: -2px;
-        right: -2px;
-        cursor: pointer;
-        color: white;
-        z-index: 10;
-        font-size: 1.2rem;
-        opacity: 70%;
-    }
-    article {
-        width: 595px;
-        height: 465px;
-        border-width: 0;
-        padding: 0;
-        top: 22px;
-        left: 8px;
-    }
-
-    article::before, article::after {
-        width: 594px;
-        height: 261px;
-        top: unset;
-        left: unset;
-        top: 11px;
-        left: 9px;
-    }
-    article::before {
-        position: fixed;
-
-        border: inherit;
-        border-width: 0.5em 0 0 0.5em;
-        width: 601px;
-        top: 155px;
-        left: 326px;
-        height: 271px;
-        z-index: 10;
-        box-shadow: inset 0 0 0 2px var(--c);
-        mix-blend-mode: difference;
-        pointer-events: none;
-        content: "";
-    }
-}
-@media (max-width: 450px) {
-    #form-div a {
-        margin: 0px 5px 15px 5px;
-        padding: 0px 3px 0px 3px;
-        font-size: 0.5rem;
-        width: 80%;
-    }
-    .glass-buttons-foresight {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 35%;
-
-    }
-    .foresight-square {
-        grid-template-columns: 1fr; /* Set the column to occupy the full width */
-        padding: 5px 0px 0px 5px;
-        width: 60%; /* Make it take full width */
-        height: 427px; /* Make it take full height of the viewport */
-        margin: 0; /* Remove any margin */
-        align-self: flex-start;
-    }
-    h4.foresight-subheader {
-        font-size: 0.5rem;
-        margin-right: 5px;
-    }
-    .close-button {
-        position: absolute;
-        top: 0px;
-        right: -11px;
-        cursor: pointer;
-        color: white;
-        z-index: 10;
-        font-size: 1rem;
-        opacity: 70%;
-    }
-    article {
-        width: 295px;
-        height: 465px;
-        border-width: 0;
-        padding: 0;
-        top: -60px;
-        left: -4px;
-    }
-
-    article::before, article::after {
-        width: 292px;
-        height: 464px;
-        top: unset;
-        left: unset;
-        top: 11px;
-        left: 16px;
-    }
-    article::before {
-        position: fixed;
-        /* bottom: 0px; */
-        border: inherit;
-        border-width: 0.5em 0 0 0.5em;
-        width: 297px;
-        left: 68px;
-        top: 206px;
-        height: 467px;
-        z-index: 10;
-        box-shadow: inset 0 0 0 2px var(--c);
-        mix-blend-mode: difference;
-        pointer-events: none;
-        content: "";
-    }
-}
-@media (max-width: 350px) {
-    .mobile-change-to-row {
-        display: flex;
-        flex-direction: row;
-    }
-    #form-div {
-        /* left: 0; */
-        right: 20px;
-        /* top: 0; */
-        bottom: 5px;
-        margin: 0;
-        position: absolute;
-
-    }
-    #form-div a {
-        margin: 0px 10px 5px 10px;
-        padding: 0px 5px 0px 5px;
-        font-size: 0.3rem;
-        width: 35%;
-    }
-    .foresight-square {
-        grid-template-columns: 1fr; /* Set the column to occupy the full width */
-        padding: 5px 0px 0px 5px;
-        width: 60%; /* Make it take full width */
-        height: 227px; /* Make it take full height of the viewport */
-        margin: 0; /* Remove any margin */
-        align-self: flex-start;
-    }
-
-    .foresight-form {
-        position: relative;
-        padding: 20px 0px 0px 20px;
-        z-index: 10;
     }
     .form-group-foresight {
         display: flex;
         flex-direction: row;
         text-align: left;
         justify-content: space-between;
-        align-items: flex-start;
+        align-items: center;
+        margin-bottom: 6px;
     }
-    h4.foresight-subheader {
-        font-size: 0.5rem;
-        margin-right: 5px;
+  article {
+    --c: rgba(143, 0, 72, 0.7);
+    --s0: calc(1.25em + 6px);
+    --s1: calc(1.25em + 6px + 0.5em);
+    place-self: center;
+    position: absolute;
+    width: 95vw;
+    height: 18em;
+    border: solid 0 transparent;
+    border-width: 0 var(--s0) var(--s0) 0;
+    padding: var(--s1) 0.5em 0.5em var(--s1);
+    background: var(--c) padding-box;
+    top: 102px;
     }
-    h3.foresight-subheader {
-        font-size: 0.4rem;
+    article::before {
+        position: absolute;
+        top: 0;
+        left: 0;
+        border: inherit;
+        border-width: 1.25em 0 0 1.25em;
+        width: 95vw;
+        height: 32em;
+    
+    
+        box-shadow: inset 0 0 0 6px var(--c);
+        mix-blend-mode: difference;
+        pointer-events: none;
+        content: "";
+        
+        
+        
+        
+      }
+      article::after {
+        position: absolute;
+        top: 26px;
+        left: 26px;
+    
+        width: 91vw;
+        height: 30em;
+    
+    
+        box-shadow: inset 0 0 0 6px var(--c);
+        mix-blend-mode: difference;
+        pointer-events: none;
+        content: "";
+        background-color: rgba(255, 255, 255, 0.06);
+        -webkit-backdrop-filter: blur(25px);
+        backdrop-filter: blur(25px);
+        z-index: 2;
+        -webkit-box-shadow: 0 25px 23px rgba(0, 0, 0, 0.15);
+        box-shadow: 0 25px 23px rgba(0, 0, 0, 0.15);
+        border: 1.5px solid rgba(255, 255, 255, 0.06);
+    
+      }
+    .foresight-square {
+        position: fixed;
+        padding: 0.5em;
+        top: 0;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1000; /* Ensure it sits above other content */
+        
     }
-    .foresight-subheader {
-        width: 100%;
-        padding: 0px 0px 0px 0px;
-        margin: 0px 0px 0px 0px;
+    #form-div a {
+        margin: 3px 10px 3px 10px;
+        padding: 0px 10px 0px 10px;
+        font-size: 0.8rem;
+        width: 40%;
+    }
+    .mobile-change-to-row {
+        display: flex;
+        flex-direction: row;
     }
     .alert-form-foresight {
         display: flex;
         text-align: start;
+        font-size: 0.7rem;
+        margin: 0px 0px 4px 0px;
+        padding: 0px 0px 0px 0px;
+    }
+}
+@media (max-height: 650px) {   
+    #form-div a {
+        margin: 3px 5px 3px 5px;
+        padding: 0px 5px 0px 5px;
         font-size: 0.4rem;
-        margin: 4px 4px 4px 4px;
-        padding: 0px 5px 0px 0px;
-    }
-    .glass-buttons-foresight {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        width: 40%;
-
-    }
-    .close-button {
-        position: absolute;
-        top: 15px;
-        right: -8px;
-        cursor: pointer;
-        color: white;
-        z-index: 10;
-        font-size: 0.8rem;
-        opacity: 70%;
-    }
-    article {
-        width: 295px;
-        height: 165px;
-        border-width: 0;
-        padding: 0;
-        top: 22px;
-        left: 8px;
+        width: 35%;
     }
 
-    article::before, article::after {
-        width: 289px;
-        height: 159px;
-        top: unset;
-        left: unset;
-        top: 11px;
-        left: 12px;
-    }
-    article::before {
-        position: fixed;
-        /* bottom: 0px; */
-        border: inherit;
-        border-width: 0.5em 0 0 0.5em;
-        width: 295px;
-        left: 20px;
-        top: 71px;
-        height: 165px;
-        z-index: 10;
-        box-shadow: inset 0 0 0 2px var(--c);
-        mix-blend-mode: difference;
-        pointer-events: none;
-        content: "";
-    }
+}
+@media (max-height: 670px) {   
+
 }
 @media (max-width: 240px) {
     .mobile-change-to-row {
