--- a/client/src/components/helpers/navbarHelpers/ForesightSquare.css
+++ b/client/src/components/helpers/navbarHelpers/ForesightSquare.css
@@ -272,6 +272,116 @@ article::before {
 @media (max-height: 670px) {   
 
 }
+@media (max-width: 450px) {
+    .text-and-close {
+        display: flex;
+        flex-direction: row;
+    }
+    article {
+        width: 95vw;
+        height: 540px;
+    }
+    article::before {
+        width: 95vw;
+        height: 540px;
+    }
+    article::after {
+        left: 16px;
+        width: 89vw;
+        height: 518px;
+        top: 16px;
+    }
+    #form-div a {
+        margin: 2px 10px 5px 10px;
+        padding: 0px 5px 0px 5px;
+        font-size: 0.6rem;
+        width: 100%;
+    }
+    .form-group-foresight {
+        display: flex;
+        flex-direction: row;
+        text-align: left;
+        justify-content: space-between;
+        align-items: center;
+        margin: 15px 0px 5px 0px;
+    }
+    h4.foresight-subheader {
+        font-size: 0.8rem;
+    }
+    .alert-form-foresight {
+        display: flex;
+        text-align: start;
+        font-size: 0.7rem;
+        margin: 0px 0px 4px 5px;
+        padding: 0px 5px 0px 5px;
+        width: 80%;
+    }
+    
+    .close-button {
+        position: absolute;
+        top: 0px;
+        right: -25px;
+        cursor: pointer;
+        color: white;
+        z-index: 10;
+        font-size: 1.5rem;
+        opacity: 70%;
+    }
+}
+@media (max-width: 420px) {
+    .alert-form-foresight {
+        display: flex;
+        text-align: start;
+        font-size: 0.7rem;
+        margin: 0px 0px 4px 0px;
+        padding: 0px 10px 0px 0px;
+    }
+    .close-button {
+        position: absolute;
+        top: 0px;
+        right: -15px;
+        cursor: pointer;
+        color: white;
+        z-index: 10;
+        font-size: 1.5rem;
+        opacity: 70%;
+    }
+    .form-group-foresight {
+        display: flex;
+        flex-direction: row;
+        text-align: left;
+        justify-content: space-between;
+        align-items: center;
+        margin: 20px 0px 5px 0px;
+    }
+}   
+@media (max-width: 350px) {
+    .form-group-foresight {
+        display: flex;
+        flex-direction: row;
+        text-align: left;
+        justify-content: space-between;
+        align-items: center;
+        margin: 15px 0px 5px 0px;
+    }
+    .alert-form-foresight {
+        display: flex;
+        text-align: start;
+        font-size: 0.7rem;
+        margin: 0px 0px 4px 0px;
+        padding: 0px 10px 0px 0px;
+    }
+    .close-button {
+        position: absolute;
+        top: 0px;
+        right: -15px;
+        cursor: pointer;
+        color: white;
+        z-index: 10;
+        font-size: 1.5rem;
+        opacity: 70%;
+    }
+}   
 @media (max-width: 240px) {
     .mobile-change-to-row {
         display: flex;
