--- a/client/src/components/helpers/navbarHelpers/MorphingFont.css
+++ b/client/src/components/helpers/navbarHelpers/MorphingFont.css
@@ -100,6 +100,17 @@ body {
     }
 
 }
+@media (max-width: 450px) {
+    #text1,
+    #text2 {
+        position: relative;
+        width: 100%;
+        display: inline-block;
+        font-size: 0.7rem;
+        letter-spacing: 1px;
+
+    }
+}
 @media (max-width: 240px) {
     #container {
         height: 15px;
