--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,7 @@
     --grey-light: #dde4ed;
     --grey-dark: #64748b;
     --violet: rgb(143, 0, 72);
+    overflow-y: visible;
 }
 
 body {
@@ -281,25 +282,9 @@ img {
     margin: 10px -10px 0 -10px;
 }
 
-/*CAROUSEL STYLES */
 
-.home-hero {
-    position: relative;
-    min-height: 720px;
-    /* background-color: var(--blue); */
-    background-color: white;
-    /* border-bottom: 5px solid rgb(143, 0, 72); */
-}
 
-.Carousel-container {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    /* background-color: rgba(143, 0, 72, 0.1); */
-    background-color: rgba(250, 0, 0, 0.1);
-}
+
 
 .slide {
     height: 100%;
@@ -2324,63 +2309,7 @@ display: none;
 .mobile-toggle-submenu {
     display: none;
 }
-/*HOME BANNER*/
-.home-banner {
-    color: #fff;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: center;
-    min-height: inherit;
-    padding: 55px;
-    position: relative;
-    /* width: 50%; */
-    z-index: 1;
-}
-.home-banner:after {
-    background: rgba(143, 0, 72, 0.2);
-    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-    backdrop-filter: blur(0.5px);
-    -webkit-backdrop-filter: blur(0.1px);
-    content: '';
-    display: inline-block;
-    height: 100%;
-    left: -200px;
-    position: absolute;
-    top: 0;
-    -webkit-transform: skew(-19deg);
-    transform: skew(-18deg);
-    width: calc(64% - 148px);
-    min-width: 750px;
-    z-index: -1;
 
-}
-.banner-title {
-    font-size: 3.2rem;
-    letter-spacing: 0.04em;
-    font-weight: 550;
-    padding: 0px;
-    margin: -5px;
-    font-family: sans-serif;
-}
-.banner-description {
-    width: 450px;
-    font-size: 1.2em;
-}
-.home-banner .btn {
-           /* T   R    B    L  */
-    padding: 10px 20px 10px 20px;
-    text-align: center;
-    margin: 0 0 10px 0;
-    background-color: var(--white);
-    border: none;
-    text-transform: uppercase;
-    font-size: 1rem;
-}
-#banner-btn-arrow {
-    padding: 0px 0px 0px 20px;
-    align-self: center;
-}
 @media (max-height: 600px) {
     .about-description-right {
         font-size: 0.8rem;
@@ -2845,7 +2774,7 @@ display: none;
         display: flex;
     }
 
-    .home-banner {
+    /* .home-banner {
         width: 100%;
         display: flex;
         justify-content: center;
@@ -2884,7 +2813,7 @@ display: none;
         display: flex;
         flex-direction: column;
         align-items: center;
-    }
+    } */
 
     .physician-name.desktop {
         display: none;
