--- a/client/src/pages/helpers/Home.css
+++ b/client/src/pages/helpers/Home.css
@@ -1,173 +1,503 @@
+/*HOME BANNER*/
+.home-banner {
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    justify-content: center;
+    min-height: inherit;
+    padding: 0px 120px 0px 120px;
+    position: relative;
+    /* width: 50%; */
+    z-index: 1;
+}
+.home-banner:after {
+    background: rgba(143, 0, 72, 0.2);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(0.5px);
+    -webkit-backdrop-filter: blur(0.1px);
+    content: '';
+    display: inline-block;
+    height: 100%;
+    left: -200px;
+    position: absolute;
+    top: 0;
+    -webkit-transform: skew(-19deg);
+    transform: skew(-18deg);
+    width: calc(64% - 148px);
+    min-width: 850px;
+    z-index: -1;
+
+}
+.banner-title {
+    font-size: 4rem;
+    /* letter-spacing: 0.04em; */
+    /* font-weight: 550; */
+    padding: 0px;
+    margin: 0px;
+    /* font-family: sans-serif; */
+}
 .banner-description {
     width: 450px;
     font-size: 1.2em;
-    z-index: 10;
+    margin: 60px 0px 60px 0px;
 }
-
-@media (max-width: 975px) {
-    .home-banner {
-        color: #fff;
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-        justify-content: flex-start;
-        min-height: inherit;
-        padding: 55px;
-        position: relative;
-        z-index: 1;
-    }
-    .banner-title-container {
-        display: flex;
-        flex-direction: column;
-        margin-top: 0px;
-    }
+.home-banner .btn {
+           /* T   R    B    L  */
+    /* padding: 10px 20px 10px 20px; */
+    /* text-align: center; */
+    /* margin: 0 0 10px 0; */
+    /* background-color: var(--white); */
+    /* border: none; */
+    /* text-transform: uppercase; */
+    /* font-size: 1rem; */
 }
+#banner-btn-arrow {
+    padding: 0px 0px 0px 20px;
 
-@media (max-width: 850px) {
+}
+/*CAROUSEL STYLES */
+
+.home-hero {
+    position: relative;
+    min-height: 720px;
+    background-color: white;
+}
+.Carousel-container {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba(250, 0, 0, 0.1);
+}
+@media (max-width: 1030px) {
     .home-hero {
-        min-height: 580px;
+        min-height: 70vh;
     }
     .home-banner {
-        padding: 10px 10px 10px 5px;
-        margin: 0px 0px 0px 30px;
-        align-items: flex-start;
+        display: flex;
         justify-content: center;
-        width: 70%;
+        height: 100%;
+        min-height: 70vh;
+        padding: 0 0px 0px 40px;
+        margin: 0px 0px 80vh 0px;
     }
     .home-banner:after {
-        background: rgba(143, 0, 72, 0.2);
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(0.5px);
-        -webkit-backdrop-filter: blur(0.1px);
-        content: '';
-        display: inline-block;
-        height: 100%;
-        left: -120px;
-        position: absolute;
-        top: 0;
-        transform: skew(-18deg);
-        width: calc(64% - 148px);
-        min-width: 480px;
-        z-index: -1;
+        min-width: 75vw;
+        height: 70vh;
+    } 
+    .Carousel-container {
+        height: 70vh;
     }
     .banner-title {
-        font-size: 2.8rem;
+        font-size: 4rem;
         padding: 0px 0px 0px 0px;
-        margin: 0px 0px 0px 0px;
-        width: 100%;
+        margin: 2px 0px 0px 10px;
     }
     .banner-description {
-        display: flex;
-        width: 100%;
+        font-size: 1.5rem;
+        width: 40%;
+        margin: 65px 0px 65px 15px;
+    }
+    .home-banner .btn {
+        padding: 0px 5px 0px 10px;
+        margin: 5px 0px 100px 15px;
         font-size: 1.2rem;
-
-        padding: 2px 30px 2px 0px;
-        margin: 40px 0px 40px 0px;
-    }
-    .home-banner .btn {
-        padding: 2px 10px 2px 10px;
-        text-align: center;
-        margin: 0px 0px 0px 0px;
-        background-color: var(--white);
-        border: none;
-        text-transform: uppercase;
-        font-size: 0.8rem;
-    }
-}
-
-@media (max-width: 450px) {
-    .home-hero {
-        min-height: 400px;
-    }
-    .banner-title-container {
-        
-    }
-    .banner-title {
-        font-size: 1.8rem;
-        padding: 0px 0px 0px 0px;
-        margin: 0px 0px 0px 0px;
-        width: 100%;
-    }
-    .banner-description {
         display: flex;
-        width: 100%;
-        font-size: 0.9rem;
-        padding: 2px 0px 2px 0px;
-        justify-content: unset;
-        margin: 30px 0px 30px 0px;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
     }
-    .home-banner .btn {
-        padding: 2px 10px 2px 10px;
-        text-align: center;
-        margin: 0px 0px 0px 0px;
-        background-color: var(--white);
-        border: none;
-        text-transform: uppercase;
-        font-size: 0.8rem;
+    .banner-buttons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
     }
-    .home-banner {
-        padding: 50px 10px 10px 5px;
-        margin: 0px 0px 0px 25px;
-        align-items: flex-start;
-        justify-content: flex-start;
+    .banner-wrapper {
+        display: flex;
+        flex-direction: row;
         width: 65%;
-    }
-    .home-banner:after {
-        background: rgba(143, 0, 72, 0.2);
-        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(0.5px);
-        -webkit-backdrop-filter: blur(0.1px);
-        content: '';
-        display: inline-block;
-        height: 100%;
-        left: -100px;
-        position: absolute;
-        top: 0;
-        transform: skew(-18deg);
-        width: calc(64% - 148px);
-        min-width: 340px;
-        z-index: -1;
+        align-items: center;
     }
     #banner-btn-arrow {
-        padding: 0px 0px 0px 10px;
-        align-self: center;
+        padding: 2px 10px 0px 5px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
     }
 }
-
-@media (max-width: 290px) or (max-height: 350px) {
-    .home-banner {
-        margin: 0px 0px 0px 0px;
-        padding: 0px 0px 0px 0px;
-        align-items: flex-start;
-        justify-content: flex-start;
-        width: 67%;
-    }
-    .home-banner::after {
-        min-width: 280px;
-    }
+@media (max-width: 815px) {
     .home-hero {
-        max-height: 250px;
-        left: 0px;
+        min-height: 60vh;
     }
-    .banner-title-container {
-        margin: 25px 0px 0px 25px;
-        padding: 0px 0px 0px 0px;
+    .home-banner {
+        display: flex;
+        justify-content: center;
+        height: 100%;
+        min-height: 60vh;
+        padding: 0px 0px 0px 30px;
+        margin: 0px 0px 0px 0px;
+    }
+    .home-banner:after {
+        min-width: 70vw;
+        height: 60vh;
+    } 
+    .Carousel-container {
+        height: 60vh;
     }
     .banner-title {
-        font-size: 1.3rem;
+        font-size: 2.5rem;
+        padding: 0px 0px 0px 0px;
+        margin: 2px 0px 0px 10px;
     }
     .banner-description {
-        padding: 0px 0px 0px 0px;
-        margin: 20px 0px 20px 25px;
-        font-size: 0.6rem;
+        font-size: 01rem;
+        width: 35%;
+        margin: 15px 0px 15px 15px;
     }
     .home-banner .btn {
-        padding: 1px 5px 1px 5px;
-        margin: 0px 0px 0px 25px;
-        text-align: center;
-        background-color: var(--white);
-        border: none;
-        text-transform: uppercase;
+        padding: 0px 5px 0px 5px;
+        margin: 35px 0px 40px 15px;
+        font-size: 0.8rem;
+        display: flex;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+    }
+    .banner-buttons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .banner-wrapper {
+        display: flex;
+        flex-direction: row;
+        width: 65%;
+        align-items: center;
+    }
+    #banner-btn-arrow {
+        padding: 5px 0px 0px 5px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
+}
+@media (max-width: 740px) {
+    .home-hero {
+        min-height: 70vh;
+    }
+    .home-banner {
+        display: flex;
+        justify-content: flex-end;
+        height: 100%;
+        min-height: 70vh;
+        padding: 30px 0px 0px 30px;
+        margin: 0px 0px 0px 0px;
+    }
+    .home-banner:after {
+        min-width: 510px;
+        height: 70vh;
+    } 
+    .Carousel-container {
+        height: 70vh;
+    }
+    .banner-title {
+        font-size: 2rem;
+        padding: 0px 0px 0px 0px;
+        margin: 2px 0px 0px 10px;
+    }
+    .banner-description {
+        font-size: 0.7rem;
+        width: 35%;
+        margin: 15px 0px 15px 15px;
+    }
+    .home-banner .btn {
+        padding: 0px 5px 0px 5px;
+        margin: 5px 0px 50vw 15px;
+        font-size: 0.4rem;
+        display: flex;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+    }
+    .banner-buttons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .banner-wrapper {
+        display: flex;
+        flex-direction: row;
+        width: 65%;
+        align-items: center;
+    }
+    #banner-btn-arrow {
+        padding: 2px 0px 0px 5px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
+}
+@media (max-width: 735px) {
+    .home-hero {
+        min-height: 70vh;
+    }
+    .home-banner {
+        display: flex;
+        justify-content: flex-end;
+        height: 100%;
+        min-height: 70vh;
+        padding: 10px 0px 0px 30px;
+        margin: 0px 0px 0px 0px;
+    }
+    .home-banner:after {
+        min-width: 510px;
+        height: 70vh;
+    } 
+    .Carousel-container {
+        height: 70vh;
+    }
+    .banner-title {
+        font-size: 2rem;
+        padding: 0px 0px 0px 0px;
+        margin: 2px 0px 0px 10px;
+    }
+    .banner-description {
+        font-size: 0.7rem;
+        width: 35%;
+        margin: 15px 0px 15px 15px;
+    }
+    .home-banner .btn {
+        padding: 0px 5px 0px 5px;
+        margin: 5px 0px 50vw 15px;
+        font-size: 0.4rem;
+        display: flex;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+    }
+    .banner-buttons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .banner-wrapper {
+        display: flex;
+        flex-direction: row;
+        width: 65%;
+        align-items: center;
+    }
+    #banner-btn-arrow {
+        padding: 2px 0px 0px 5px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
+}
+@media (max-width: 700px) {
+    .home-hero {
+        min-height: 70vh;
+    }
+    .home-banner {
+        display: flex;
+        justify-content: flex-end;
+        height: 100%;
+        min-height: 70vh;
+        padding: 30px 0px 0px 30px;
+        margin: 0px 0px 0px 0px;
+    }
+    .home-banner:after {
+        min-width: 510px;
+        height: 70vh;
+    } 
+    .Carousel-container {
+        height: 70vh;
+    }
+    .banner-title {
+        font-size: 2rem;
+        padding: 0px 0px 0px 0px;
+        margin: 2px 0px 0px 10px;
+    }
+    .banner-description {
+        font-size: 0.7rem;
+        width: 35%;
+        margin: 15px 0px 15px 15px;
+    }
+    .home-banner .btn {
+        padding: 0px 5px 0px 5px;
+        margin: 5px 0px 50vw 15px;
+        font-size: 0.4rem;
+        display: flex;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+    }
+    .banner-buttons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .banner-wrapper {
+        display: flex;
+        flex-direction: row;
+        width: 65%;
+        align-items: center;
+    }
+    #banner-btn-arrow {
+        padding: 2px 0px 0px 5px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
+}
+@media (max-width: 415px) {
+    .home-hero {
+        min-height: 70vh;
+    }
+    .home-banner {
+        display: flex;
+        justify-content: flex-end;
+        height: 100%;
+        min-height: 70vh;
+        padding: 0px 0px 0px 0px;
+        margin: 0px 0px 0px 0px;
+    }
+    .home-banner:after {
+        min-width: 410px;
+        min-height: 70vh;
+    } 
+    .Carousel-container {
+        height: 70vh;
+    }
+    .banner-title {
+        font-size: 1.6rem;
+        padding: 0px 0px 0px 0px;
+        margin: 5px 0px 0px 10px;
+    }
+    .banner-description {
+        font-size: 0.7rem;
+        width: 41%;
+        margin: 15px 0px 15px 15px;
+    }
+    .home-banner .btn {
+        padding: 0px 5px 0px 5px;
+        margin: 5px 0px 50vw 15px;
+        font-size: 0.4rem;
+        display: flex;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+    }
+    .banner-buttons {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+    }
+    .banner-wrapper {
+        display: flex;
+        flex-direction: row;
+        width: 65%;
+        align-items: center;
+    }
+    #banner-btn-arrow {
+        padding: 2px 0px 0px 5px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
+}
+@media (max-width: 350px) {
+    .home-hero {
+        min-height: 80vh;
+    }
+    .home-banner {
+        display: flex;
+        justify-content: flex-start;
+        height: 100%;
+        min-height: 80vh;
+        padding: 20px 0px 0px 0px;
+        margin: 0px 0px 0px 0px;
+    }
+    .Carousel-container {
+        height: 80vh;
+    }
+    .home-banner:after {
+        min-width: 355px;
+        height: 80vh;
+
+    } 
+    .banner-title {
+        font-size: 1rem;
+        padding: 0px 0px 0px 0px;
+        margin: 5px 0px 0px 15px;
+    }
+    .banner-description {
         font-size: 0.5rem;
+        width: 38%;
+        margin: 15px 0px 15px 15px;
+    }
+    .home-banner .btn {
+        padding: 0px 5px 0px 5px;
+        margin: 5px 0px 50vw 15px;
+        font-size: 0.4rem;
+        display: flex;
+        align-items: center;
+        align-self: center;
+        justify-content: center;
+    }
+    #banner-btn-arrow {
+        padding: 1px 0px 0px 5px;
+        align-items: center;
+        justify-content: center;
+        display: flex;
+    }
+}
+@media (max-width: 275px) {
+    .home-hero {
+        min-height: 80vh;
+    }
+    .home-banner {
+        display: flex;
+        height: 100%;
+        min-height: 80vh;
+        padding: 40px 0px 0px 0px;
+        margin: 0px 0px 0px 0px;
+    }
+    .home-banner:after {
+        min-width: 360px;
+        height: 80vh;
+        left: -200px;
+        transform: skew(-18deg);
+        width: calc(64% - 148px);
+    }
+    .Carousel-container {
+        height: 80vh;
+    }
+    .banner-title {
+        font-size: 1.5rem;
+        padding: 0px 0px 0px 0px;
+        margin: 5px 0px 0px 15px;
+    }
+    .banner-description {
+        font-size: 0.7rem;
+        width: 60%;
+        margin: 15px 0px 15px 15px;
+    }
+    .home-banner .btn {
+        padding: 0px 5px 0px 6px;
+        margin: 5px 0px 0px 15px;
+        font-size: 0.7rem;
+        display: flex;
+        align-items: center;
+    }
+    #banner-btn-arrow {
+        padding: 0px 0px 0px 5px;
     }
 }
