--- a/client/src/pages/helpers/Home.css
+++ b/client/src/pages/helpers/Home.css
@@ -81,7 +81,7 @@
         height: 100%;
         min-height: 70vh;
         padding: 0 0px 0px 40px;
-        margin: 0px 0px 80vh 0px;
+        margin: 0px 0px 0px 0px;
     }
     .home-banner:after {
         min-width: 75vw;
@@ -91,6 +91,7 @@
         height: 70vh;
     }
     .banner-title {
+        line-height: 64px;
         font-size: 4rem;
         padding: 0px 0px 0px 0px;
         margin: 2px 0px 0px 10px;
@@ -102,7 +103,7 @@
     }
     .home-banner .btn {
         padding: 0px 5px 0px 10px;
-        margin: 5px 0px 100px 15px;
+        margin: 5px 0px 5px 15px;
         font-size: 1.2rem;
         display: flex;
         align-items: center;
@@ -148,6 +149,7 @@
         height: 60vh;
     }
     .banner-title {
+        line-height: 1.5;
         font-size: 2.5rem;
         padding: 0px 0px 0px 0px;
         margin: 2px 0px 0px 10px;
@@ -187,11 +189,11 @@
 }
 @media (max-width: 740px) {
     .home-hero {
-        min-height: 70vh;
+        min-height: 80vh;
     }
     .home-banner {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         height: 100%;
         min-height: 70vh;
         padding: 30px 0px 0px 30px;
@@ -199,10 +201,10 @@
     }
     .home-banner:after {
         min-width: 510px;
-        height: 70vh;
+        height: 80vh;
     } 
     .Carousel-container {
-        height: 70vh;
+        height: 80vh;
     }
     .banner-title {
         font-size: 2rem;
@@ -216,7 +218,7 @@
     }
     .home-banner .btn {
         padding: 0px 5px 0px 5px;
-        margin: 5px 0px 50vw 15px;
+        margin: 5px 0px 5px 15px;
         font-size: 0.4rem;
         display: flex;
         align-items: center;
@@ -242,81 +244,25 @@
         display: flex;
     }
 }
-@media (max-width: 735px) {
-    .home-hero {
-        min-height: 70vh;
-    }
-    .home-banner {
-        display: flex;
-        justify-content: flex-end;
-        height: 100%;
-        min-height: 70vh;
-        padding: 10px 0px 0px 30px;
-        margin: 0px 0px 0px 0px;
-    }
-    .home-banner:after {
-        min-width: 510px;
-        height: 70vh;
-    } 
-    .Carousel-container {
-        height: 70vh;
-    }
-    .banner-title {
-        font-size: 2rem;
-        padding: 0px 0px 0px 0px;
-        margin: 2px 0px 0px 10px;
-    }
-    .banner-description {
-        font-size: 0.7rem;
-        width: 35%;
-        margin: 15px 0px 15px 15px;
-    }
-    .home-banner .btn {
-        padding: 0px 5px 0px 5px;
-        margin: 5px 0px 50vw 15px;
-        font-size: 0.4rem;
-        display: flex;
-        align-items: center;
-        align-self: center;
-        justify-content: center;
-    }
-    .banner-buttons {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-    }
-    .banner-wrapper {
-        display: flex;
-        flex-direction: row;
-        width: 65%;
-        align-items: center;
-    }
-    #banner-btn-arrow {
-        padding: 2px 0px 0px 5px;
-        align-items: center;
-        justify-content: center;
-        display: flex;
-    }
-}
+
 @media (max-width: 700px) {
     .home-hero {
-        min-height: 70vh;
+        min-height: 80vh;
     }
     .home-banner {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         height: 100%;
         min-height: 70vh;
-        padding: 30px 0px 0px 30px;
+        padding: 20px 0px 0px 30px;
         margin: 0px 0px 0px 0px;
     }
     .home-banner:after {
         min-width: 510px;
-        height: 70vh;
+        height: 80vh;
     } 
     .Carousel-container {
-        height: 70vh;
+        height: 80vh;
     }
     .banner-title {
         font-size: 2rem;
@@ -330,12 +276,13 @@
     }
     .home-banner .btn {
         padding: 0px 5px 0px 5px;
-        margin: 5px 0px 50vw 15px;
+        margin: 5px 0px 5px 15px;
         font-size: 0.4rem;
         display: flex;
         align-items: center;
         align-self: center;
         justify-content: center;
+        
     }
     .banner-buttons {
         display: flex;
@@ -371,6 +318,7 @@
     .home-banner:after {
         min-width: 420px;
         min-height: 70vh;
+        height: 70vh;
     } 
     .Carousel-container {
         height: 70vh;
@@ -426,7 +374,7 @@
         margin: 0px 0px 0px 0px;
     }
     .Carousel-container {
-        height: 80vh;
+        height: 88vh;
     }
     .home-banner:after {
         min-width: 355px;
@@ -451,9 +399,13 @@
         align-items: center;
         align-self: center;
         justify-content: center;
+        position: absolute;
+        bottom: calc(60vh - 50%); /* Position the button 50vw down from the top of the viewport */
+        left: 0; /* Adjust as needed based on your layout */
+        margin: 5px 5px 5px 15px;
     }
     #banner-btn-arrow {
-        padding: 1px 0px 0px 5px;
+        padding: 2px 0px 0px 5px;
         align-items: center;
         justify-content: center;
         display: flex;
@@ -461,12 +413,13 @@
 }
 @media (max-width: 275px) {
     .home-hero {
-        min-height: 80vh;
+        min-height: 79vh;
+        margin-bottom: 0px;
     }
     .home-banner {
         display: flex;
         height: 100%;
-        min-height: 80vh;
+        min-height: 67vh;
         padding: 40px 0px 0px 0px;
         margin: 0px 0px 0px 0px;
     }
@@ -496,6 +449,7 @@
         font-size: 0.7rem;
         display: flex;
         align-items: center;
+        bottom: unset;
     }
     #banner-btn-arrow {
         padding: 0px 0px 0px 5px;
