--- a/client/src/components/helpers/AboutUsComponent.css
+++ b/client/src/components/helpers/AboutUsComponent.css
@@ -231,6 +231,7 @@
         width: 100%;
         justify-content: center;
         align-items: center;
+        padding: 60vw 0px 0px 0px;
     }
     .about-title {
         padding: 2px 0px 2px 0px;
