--- a/client/src/pages/helpers/Home.css
+++ b/client/src/pages/helpers/Home.css
@@ -455,3 +455,32 @@
         padding: 0px 0px 0px 5px;
     }
 }
+
+/* Media Responsive Begin */
+
+/* 
+@media (max-width: 1030px) {
+
+}
+@media (max-width: 815px) {
+
+}
+@media (max-width: 740px) {
+
+}
+
+@media (max-width: 700px) {
+
+}
+@media (max-width: 415px) {
+
+}
+@media (max-width: 350px) {
+
+}
+@media (max-width: 275px) {
+
+} 
+*/
+
+/* ----Media Responsive End---- */
