--- a/client/src/pages/about/helpers/About.css
+++ b/client/src/pages/about/helpers/About.css
@@ -1,3 +1,11 @@
+.about-parent-div {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+
+}
+
 .about-div-responsive {
     display: flex;
     justify-content: flex-end;
@@ -10,7 +18,125 @@
     top: 0;
     margin-bottom: 300px;
 }
+.appointment-section {
+    position: absolute;
+    right: -2px;
+    width: 360px;
+    top: 450px;
+    /* rgb(143, 0, 72) */
+    background: rgba(255, 255, 255, 0.25); /* Modified background with transparency */
+    backdrop-filter: blur(10px); /* Adding blur effect */
+    border-radius: 10px; /* Adding border radius for smoother edges */
+    border: 1px solid rgba(255, 255, 255, 0.18); /* Border color with transparency */
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.57); /* Box shadow for depth */
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    border-radius: 3px;
+    border: 1px solid rgb(255, 255, 255);
+    border-right: 0px solid rgb(255, 255, 255);
 
+    transition: all 0.3s ease 0s; /* Adding transition for smoother hover effect */
+    z-index: 10;
+    margin: 140px 0 0 0;
+
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-radius: 0.2rem;
+    background: rgba(161, 2, 42, 0.7);
+    
+    padding: 1.5rem;
+    color: #fff;
+}
+.about-div-bulleted-bring .portal-button {
+    display: flex;
+    align-self: center;
+    background-color: #e0e0e0; /* Slightly different bg color for list items */
+    padding: 4px 8px 4px 8px; /* Padding inside list items */
+    border-radius: 20px; /* Rounded corners for list items */
+    font-size: 1rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgb(255, 255, 255); /* Text shadow */
+    
+    width: fit-content;
+    color: black;
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.95);
+    border: 1px solid rgb(0, 0, 0);
+}
+.appointment-section:hover {
+    box-shadow: 0 8px 48px 0 rgba(31, 38, 135, 0.5); /* Adjusting box shadow on hover */
+    transform: translateY(-5px); /* Adding slight lift effect on hover */
+}
+
+.about-div-bulleted-bring {
+    padding: 0px 0px 20px 0px;
+    color: white;
+}
+.about-div-bulleted-bring h2 {
+    font-size: 1.4rem;
+    padding: 0px 0px 0px 5px;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5); /* Text shadow */
+
+}
+.about-div-bulleted-bring p {
+    font-size: 1rem;
+    padding: 0px 0px 10px 10px;
+    line-height: 25px;
+}
+.unordered-list-about-bring {
+    list-style-type: none; /* Removes default list styling */
+    padding: 10px 10px 0px 10px; /* Removes default padding */
+
+    display: flex; /* Utilizes flexbox for layout */
+    flex-direction: column; /* Stacks list items vertically */
+    gap: 5px; /* Space between list items */
+}
+
+.unordered-list-about-bring li {
+    background-color: #e0e0e0; /* Slightly different bg color for list items */
+    padding: 4px 8px 4px 8px; /* Padding inside list items */
+    border-radius: 20px; /* Rounded corners for list items */
+    font-size: 1rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgb(255, 255, 255); /* Text shadow */
+    
+    width: fit-content;
+    color: black;
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.95);
+    border: 1px solid rgb(0, 0, 0);
+}
+
+.unordered-list-about-bring button {
+    background-color: #e0e0e0; /* Slightly different bg color for list items */
+    padding: 4px 8px 4px 8px; /* Padding inside list items */
+    border-radius: 20px; /* Rounded corners for list items */
+    font-size: 1rem;
+    font-weight: bold;
+    text-shadow: 2px 2px 4px rgb(255, 255, 255); /* Text shadow */
+    align-self: center;
+    width: fit-content;
+    color: black;
+    backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(255, 255, 255, 0.95);
+    border: 1px solid rgb(0, 0, 0);
+}
+
+.unordered-list-about-bring li img {
+    width: 100%; /* Ensures images fit within the list item */
+    max-width: 100px; /* Max width for images */
+    height: auto; /* Maintains aspect ratio */
+    border-radius: 2px; /* Rounded corners for images */
+}
+.portal-button:hover {
+    transform: scale(1.05);
+}
+.portal-button:active {
+    transform: translateY(3px);
+}
 .about-div-two-responsive {
     display: flex;
     width: 100%;
@@ -199,7 +325,25 @@
 }
 @media (max-width: 815px) {
     #about-div-doctor-responsive {
-        top: -97px;
+        top: -92px;
+    }
+    .about-div-two-responsive {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .unordered-list-about {
+        flex-direction: column; /* Ensure vertical stacking on smaller screens */
+    }
+}
+@media (max-width: 740px) {
+    #about-div-doctor-responsive {
+        top: -85px;
+    }
+}
+@media (max-width: 690px) {
+    #about-div-doctor-responsive {
+        top: -75px;
     }
 }
 @media screen and (max-width: 501px) {
@@ -217,12 +361,44 @@
         font-size: 1.2rem;
     }
 }
+@media (max-width: 420px) {
+    #about-div-doctor-responsive {
+        top: -25px;
+    }
+}
+
+@media (max-width: 380px) {
+    #about-div-doctor-responsive {
+        top: -18px;
+    }
+}
 
 @media (max-width: 350px) {
+    .about-parent-div {
+        flex-direction: column;
+    }
     #about-div-doctor-responsive {
-        top: -7px;
+        top: 8px;
     }
     .about-div-bulleted p {
         font-size: 1rem;
+    }
+    .about-div-responsive {
+        margin: 30px 30px 30px 30px;
+        position: relative;
+    }
+    .appointment-section {
+        right: unset;
+        top: unset;
+        width: 90vw;
+        position: relative;
+        padding: 0.5rem;
+        margin: 0px 0px 0px 0px;
+    }
+    .about-div-bulleted-bring h2 {
+        font-size: 1.3rem;
+    }
+    .unordered-list-about-bring li {
+        font-size: 0.8rem;
     }
 }
